# AISMicroOrg

./: .gitignore  README.md  StackExchangeProcessing.ipynb  dataset_utils.py  finetune_config.yaml  finetuning_ntb.ipynb  finetuning_script.py  finetuning_utils.py  prepare_dataset.py  pyproject.toml  requirements.txt  reward_config.yaml
configs/: dataset_config.yaml  rlhf_config.yaml
finetuning/: finetuning_script.py  finetuning_utils.py
reward_model/: reward_modeling.ipynb  reward_modeling_script.py  reward_utils.py
rlhf/: rlhf_ntb.ipynb
src/aismicroorg/: utils.py
src/aismicroorg/dataset/: dataset_utils.py  prepare_dataset.py
src/aismicroorg/finetune/: finetuning_script.py  finetuning_utils.py  merge_peft_adapter.py
src/aismicroorg/reward_model/: reward_modeling.ipynb  reward_modeling_script.py  reward_utils.py
src/aismicroorg/rlhf/: rlhf_ntb.ipynb  rlhf_script.py  rlhf_utils.py
